# comp-chem-tools

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  LICENSE  README.md  README.rst  environment.yaml  get_ref_energies.py  pyproject.toml
.github/workflows/: pre-commit.yaml  test.yaml
benchmarks/: bde.py  tautbase.py
cct/: __init__.py  ase_calcs.py  consts.py  crest.py  gxtb.py  module.py  utils.py  widget.py
cct/energy/: __init__.py  consts.py  energy.py  gxtb.py
cct/molsolv/: __init__.py  ani_fp.py  calc.py  descriptor.py  model.py  sasa.py
cct/pka/: conformer.py  draw.py  predictor.py
cct/pka/model/: transformer.py  unimol.py  utils.py
cct/rdkit/: ase.py  conformers.py  connectivity.py  coordinates.py  crest.py  crop.py  distinct_conformers.py  hydrogens.py  io.py  mmff.py  residue.py
cct/rdkit/atom/: delete.py
cct/rdkit/bond/: delete.py
cct/workflows/: __init__.py  conformers.py  tautomers.py
docker/: Dockerfile
docker/gxtb/: Dockerfile
docs/source/: conf.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  ringhop_v2.ipynb
tests/: __init__.py  base_test.py
