[tool.poetry]
name = "comp-chem-tools"
version = "0.1.0"
description = "A simple Python package"
authors = ["finlayiainmaclean@gmail.com"]
license = "MIT"
readme = "README.rst"
packages = [{ include = "cct" }]
homepage = "https://github.com/finlayiainmaclean/cct"
repository = "https://github.com/finlayiainmaclean/cct"
keywords = ["numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.4"
mypy = "^1.10"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
extend-select = ["E", "F", "B", "I", "W", "C4", "D"]
ignore = ["D100", "D101", "D205"]  # adjust to taste

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
