[project]
dependencies = []
name = "cct"
requires-python = ">= 3.10"
version = "0.1.0"

[tool.setuptools]
packages = ["cct"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "S101"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-aarch64"]


[tool.pixi.feature.dev.dependencies]
# Conda dependencies
python = "3.10.*"
crest = "*"
xtb = "*"
libgfortran = "14.2.0.*"
click = "*"
rdkit = "*"
tblite-python = ">=0.4.0"
tblite = ">=0.4.0"
jupyter = "*"
nwchem = "*"
openbabel = "*"
freesasa = "*"


[tool.pixi.feature.dev.pypi-dependencies]
# Pip dependencies
cct = {path = ".", editable = true}
ruff = ">=0.12"
mypy = ">=1.17"
pytest = "*"
torch = "*"
torchani = "*"
torch_geometric = "*"
fairchem-core = "*"
e3nn = "*"
wget = "*"
pymsym = "*"
datamol = "*"
p_tqdm = "*"
ray = "*"


[tool.pixi.feature.dev.tasks]
format = "ruff format $PIXI_PROJECT_ROOT"
lint = "ruff check $PIXI_PROJECT_ROOT"
fix = "ruff check --fix $PIXI_PROJECT_ROOT"
typecheck = "mypy $PIXI_PROJECT_ROOT"
test = "pytest $PIXI_PROJECT_ROOT"
jupyter = "jupyter notebook"

[tool.pixi.environments]
default = {features = ["dev"], solve-group = "default"}